# ComfyUI-AsyncPause

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml
web/js/: async-pause.js  sounds.js  traversal.js
workflows/: pause_and_notify.json  pause_subgraphs.json
workflows/notify/: audio_output.json  audio_passthrough.json  toast_output.json  toast_passthrough.json
workflows/pause/: pause_chained.json  pause_chained_parallel.json  pause_parallel.json  pause_single.json
